# cs2_movement_predictor

./: .gitignore  DemoAI.ipynb  README.md  pyproject.toml
checkpoints/: _epoch_0.pth  _epoch_20.pth
