[project]
name = "demoai"
version = "0.1.0"
description = ""
authors = [
    {name = "MbGen",email = "redpyl6@gmail.com"}
]
readme = "README.md"
requires-python = "<3.14,>=3.10"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "demoparser2 (>=0.39.0,<0.40.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
